tdf#131638: Fix text cell incorrect formula

Change-Id: I086f077540f52c6ed5fb4df9f0ea64aa95aea152
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/152348
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>